# par-itertools-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: impls.rs  lib.rs  traits.rs
src/rayon/: combinations_array.rs  mod.rs  permutations_array.rs
tests/: rayon_slice_primitives.rs
